--- a/_config.yml
+++ b/_config.yml
@@ -28,14 +28,14 @@ github:
   username: roharui             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: roharui_            # change to your twitter username
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
+  name: taeYoon_kim                  # it will shows as the copyright owner in Footer
   email: jack555586@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
+    - https://twitter.com/roharui_      # change to your twitter homepage
     - https://github.com/Roharui       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
